# EzAL

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE.md  README.md
EzAL/: ALlibs.h  CMakeLists.txt  EzAL.h  EzALlibs.h  SoundBuffer.cpp  SoundBuffer.h  SoundDevice.cpp  SoundDevice.h  SoundSource.cpp  SoundSource.h
EzALExe/: CMakeLists.txt  main.cpp
